--- a/Styles/main.css
+++ b/Styles/main.css
@@ -14,31 +14,32 @@ p{
 }
 
 
-a {
-	color: rgb(150, 150, 150)
-}
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #222;
-    border: 3px solid #333;
 }
 li {
     float: left;
     border-right: 3px solid #333;
 }
+li:last-child {
+    border-right: none;
+    border-left: 3px solid #333;
+}
 li a {
      display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 15px 25px;
     text-decoration: none;
 }
 li a:hover {
     background-color: #224;
 }
+
 
 .container {
     position: relative;
